--- a/pages/3415.html
+++ b/pages/3415.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4744/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4744/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -985,10 +985,20 @@ margin-left: 0em;
 
 <p>(<a href="#Lurie">Lurie, theorem 2.4.6.1</a>)</p>
 
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℬ</mi></mrow><annotation encoding="application/x-tex">\mathcal{B}</annotation></semantics></math> be a set of representatives of isomorphism classes of simplicial sets <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi></mrow><annotation encoding="application/x-tex">B</annotation></semantics></math> satisfying the following properties</p>
+
+<ul>
+<li><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>B</mi> <mn>0</mn></msub><mo>=</mo><mo stretchy="false">{</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy="false">}</mo></mrow><annotation encoding="application/x-tex">B_0=\{0,1\}</annotation></semantics></math>,</li>
+
+<li><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi></mrow><annotation encoding="application/x-tex">B</annotation></semantics></math> has countably-many simplices,</li>
+
+<li>The inclusion <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">{</mo><mn>0</mn><mo stretchy="false">}</mo><mo>→</mo><mi>B</mi></mrow><annotation encoding="application/x-tex">\{0\}\to B</annotation></semantics></math> is a categorical equivalence.</li>
+</ul>
+
 <p>
 <div class='num_prop'>
 <h6>Proposition</h6>
-<p>The set of inner horn inclusions together with a set of representatives of weak equivalences <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">{</mo><mn>0</mn><mo stretchy="false">}</mo><mo>→</mo><mi>B</mi></mrow><annotation encoding="application/x-tex">\{0\}\to B</annotation></semantics></math>, where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi></mrow><annotation encoding="application/x-tex">B</annotation></semantics></math> has two vertices and countably many nondegenerated simplices, is a set of generating acyclic cofibrations for the Joyal model structure.</p>
+<p>The union of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℬ</mi></mrow><annotation encoding="application/x-tex">\mathcal{B}</annotation></semantics></math> just defined with the set of inner horn inclusions is a set of generating acyclic cofibrations for the Joyal model structure.</p>
 </div>
 </p>
 
@@ -1001,7 +1011,7 @@ margin-left: 0em;
 
 <h3 id="RelToInfGrpds">Relation to the model structure for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>∞</mn></mrow><annotation encoding="application/x-tex">\infty</annotation></semantics></math>-groupoids</h3>
 
-<p>The inclusion of <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category">(∞,1)-catgeories</a> <span class="newWikiWord">? Grpd<a href="/nlab/new/%3F+Grpd">?</a></span> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mover><mo>↪</mo><mi>i</mi></mover></mrow><annotation encoding="application/x-tex">\stackrel{i}{\hookrightarrow}</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29Cat">(∞,1)Cat</a> has a left and a right <a class="existingWikiWord" href="/nlab/show/adjoint+%28%E2%88%9E%2C1%29-functor">adjoint (∞,1)-functor</a></p>
+<p>The inclusion of <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category">(∞,1)-catgeories</a> <a class="existingWikiWord" href="/nlab/show/%E2%88%9EGrpd">∞Grpd</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mover><mo>↪</mo><mi>i</mi></mover></mrow><annotation encoding="application/x-tex">\stackrel{i}{\hookrightarrow}</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29Cat">(∞,1)Cat</a> has a left and a right <a class="existingWikiWord" href="/nlab/show/adjoint+%28%E2%88%9E%2C1%29-functor">adjoint (∞,1)-functor</a></p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>grpdfy</mi><mo>⊣</mo><mi>i</mi><mo>⊣</mo><mi>Core</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mo>:</mo><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mo stretchy="false">(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy="false">)</mo><mi>Cat</mi><mover><mover><mover><mo>→</mo><mi>Core</mi></mover><mover><mo>←</mo><mi>i</mi></mover></mover><mover><mo>→</mo><mi>grpdfy</mi></mover></mover><mn>∞</mn><mi>Grpd</mi><mspace width="thinmathspace"></mspace><mo>,</mo></mrow><annotation encoding="application/x-tex">
   (grpdfy \dashv i \dashv Core)
   \;\;
@@ -1105,17 +1115,17 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Andre+Joyal">Andre Joyal</a>, <em>Theory of quasi-categories I</em></li>
 </ul>
 
-<p>Unfortunately, this is still not publically available.</p>
+<p>Unfortunately, this is still not publicaly available.</p>
 
 <p>A proof that proceeds via <a class="existingWikiWord" href="/nlab/show/homotopy+coherent+nerve">homotopy coherent nerve</a> and <a class="existingWikiWord" href="/nlab/show/simplicially+enriched+categories">simplicially enriched categories</a> is given in detail following theorem 2.2.5.1 in</p>
 
-<ul id="Lurie">
-<li><a class="existingWikiWord" href="/nlab/show/Jacob+Lurie">Jacob Lurie</a>, <em><a class="existingWikiWord" href="/nlab/show/Higher+Topos+Theory">Higher Topos Theory</a></em></li>
+<ul>
+<li id="Lurie"><a class="existingWikiWord" href="/nlab/show/Jacob+Lurie">Jacob Lurie</a>, <em><a class="existingWikiWord" href="/nlab/show/Higher+Topos+Theory">Higher Topos Theory</a></em></li>
 </ul>
 
 <p>Another construction is given in</p>
 
-<p>\bibitem{Stevenson} Danny Stevenson. Notes on the Joyal model structure.</p>
+<p>\bibitem{Stevenson} <a class="existingWikiWord" href="/nlab/show/Danny+Stevenson">Danny Stevenson</a>, <em>Notes on the Joyal model structure</em> (2018) arXiv:<a href="https://arxiv.org/abs/1810.05233">1810.05233</a>.</p>
 
 <p>The relation to the model structure for <a class="existingWikiWord" href="/nlab/show/complete+Segal+space">complete Segal space</a>s is in</p>
 
@@ -1125,8 +1135,8 @@ margin-left: 0em;
 
 <p>Discussion with an eye towards <a class="existingWikiWord" href="/nlab/show/Cisinski+model+structures">Cisinski model structures</a> and the <a class="existingWikiWord" href="/nlab/show/model+structure+on+cellular+sets">model structure on cellular sets</a> is in</p>
 
-<ul id="Ara">
-<li><a class="existingWikiWord" href="/nlab/show/Dimitri+Ara">Dimitri Ara</a>, <em>Higher quasi-categories vs higher Rezk spaces</em> (<a href="http://arxiv.org/abs/1206.4354">arXiv</a>)</li>
+<ul>
+<li id="Ara"><a class="existingWikiWord" href="/nlab/show/Dimitri+Ara">Dimitri Ara</a>, <em>Higher quasi-categories vs higher Rezk spaces</em> (<a href="http://arxiv.org/abs/1206.4354">arXiv</a>)</li>
 </ul>
 
 <p>See also</p>
@@ -1146,14 +1156,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 16, 2018 at 22:41:32.
+  Last revised on October 17, 2018 at 00:44:05.
   See the <a href="https://ncatlab.org/nlab/history/model structure for quasi-categories" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/model+structure+for+quasi-categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/model+structure+for+quasi-categories/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/model+structure+for+quasi-categories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/model+structure+for+quasi-categories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/model+structure+for+quasi-categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/model+structure+for+quasi-categories/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/model+structure+for+quasi-categories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/model+structure+for+quasi-categories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/model structure for quasi-categories/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
