--- a/pages/1583.html
+++ b/pages/1583.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9143/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9143/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -760,7 +760,7 @@ margin-left: 0em;
 
 <h2 id="definition">Definition</h2>
 
-<p><a class="existingWikiWord" href="/nlab/show/the">The</a><strong>empty space</strong> is the <a class="existingWikiWord" href="/nlab/show/topological+space">topological space</a> with no points. That is, it is the <a class="existingWikiWord" href="/nlab/show/empty+set">empty set</a> equipped with its unique topology.</p>
+<p>The <strong>empty space</strong> is the <a class="existingWikiWord" href="/nlab/show/topological+space">topological space</a> with no points. That is, it is the <a class="existingWikiWord" href="/nlab/show/empty+set">empty set</a> equipped with its unique topology.</p>
 
 <h2 id="properties">Properties</h2>
 
@@ -833,14 +833,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 17, 2018 at 01:39:40.
+  Last revised on October 17, 2018 at 07:37:36.
   See the <a href="https://ncatlab.org/nlab/history/empty space" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/empty+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/empty+space/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/empty+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/empty+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/empty+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/empty+space/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/empty+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/empty+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/empty space/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
