--- a/pages/19843.html
+++ b/pages/19843.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -317,10 +317,12 @@ margin-left: 0em;
 
 <h2 id="status">Status</h2>
 
-<h2 id="list_open_questions">List open questions</h2>
+<h2 id="notes">Notes</h2>
+
+<h2 id="tasks_quetions_to_answer">Tasks/ Quetions to answer</h2>
 
 <ul>
-<li>see that in BRST</li>
+<li>Understand local BV-BRST complex? ** See that in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mi>E</mi> <mrow><mi>BV</mi><mo>−</mo><mi>BRST</mi></mrow></msub><mo>,</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mi>L</mi><mo>+</mo><msub><mi>L</mi> <mi>BRST</mi></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(E_{BV-BRST}, -L+L_{BRST})</annotation></semantics></math> there are no nontrivial gauge symmetries</li>
 </ul>
 </body></html>
 
@@ -328,14 +330,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on October 15, 2018 at 06:39:08.
+  Last revised on October 17, 2018 at 17:55:22.
   See the <a href="https://ncatlab.org/nlab/history/Tim Berberich/master_thesis" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Tim+Berberich%2Fmaster_thesis" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Tim+Berberich%2Fmaster_thesis" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Tim+Berberich%2Fmaster_thesis/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Tim+Berberich%2Fmaster_thesis" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Tim+Berberich%2Fmaster_thesis" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Tim Berberich/master_thesis/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
