--- a/pages/3415.html
+++ b/pages/3415.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4744/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4744/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -985,15 +985,17 @@ margin-left: 0em;
 
 <p>(<a href="#Lurie">Lurie, theorem 2.4.6.1</a>)</p>
 
-<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℬ</mi></mrow><annotation encoding="application/x-tex">\mathcal{B}</annotation></semantics></math> be a set of representatives of isomorphism classes of simplicial sets <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi></mrow><annotation encoding="application/x-tex">B</annotation></semantics></math> satisfying the following properties</p>
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ℬ</mi> <mi>obj</mi></msub></mrow><annotation encoding="application/x-tex">\mathcal{B}_obj</annotation></semantics></math> be a set of representatives of isomorphism classes of simplicial sets <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi></mrow><annotation encoding="application/x-tex">B</annotation></semantics></math> satisfying the following properties</p>
 
 <ul>
 <li><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>B</mi> <mn>0</mn></msub><mo>=</mo><mo stretchy="false">{</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy="false">}</mo></mrow><annotation encoding="application/x-tex">B_0=\{0,1\}</annotation></semantics></math>,</li>
 
 <li><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi></mrow><annotation encoding="application/x-tex">B</annotation></semantics></math> has countably-many simplices,</li>
 
-<li>The inclusion <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">{</mo><mn>0</mn><mo stretchy="false">}</mo><mo>→</mo><mi>B</mi></mrow><annotation encoding="application/x-tex">\{0\}\to B</annotation></semantics></math> is a categorical equivalence.</li>
+<li>The inclusion <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">{</mo><mn>0</mn><mo stretchy="false">}</mo><mo>→</mo><mi>B</mi></mrow><annotation encoding="application/x-tex">\{0\}\to B</annotation></semantics></math> is a categorical equivalence,</li>
 </ul>
+
+<p>and let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℬ</mi></mrow><annotation encoding="application/x-tex">\mathcal{B}</annotation></semantics></math> be the set <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">{</mo><mo stretchy="false">{</mo><mn>0</mn><mo stretchy="false">}</mo><mo>→</mo><mi>B</mi><mo lspace="mediummathspace" rspace="mediummathspace">∣</mo><mi>B</mi><mo>∈</mo><mi>ℬ</mi><mo stretchy="false">}</mo></mrow><annotation encoding="application/x-tex">\{\{0\}\to B\mid B\in \mathcal{B}\}</annotation></semantics></math>.</p>
 
 <p>
 <div class='num_prop'>
@@ -1005,7 +1007,7 @@ margin-left: 0em;
 <p>
 <div class='proof'>
 <h6>Proof</h6>
-<p>See \cite[Theorem B]{Stevenson}.</p>
+<p>See (<a href="#Stevenson18">Stevenson 2018</a>, Theorem B).</p>
 </div>
 </p>
 
@@ -1125,7 +1127,9 @@ margin-left: 0em;
 
 <p>Another construction is given in</p>
 
-<p>\bibitem{Stevenson} <a class="existingWikiWord" href="/nlab/show/Danny+Stevenson">Danny Stevenson</a>, <em>Notes on the Joyal model structure</em> (2018) arXiv:<a href="https://arxiv.org/abs/1810.05233">1810.05233</a>.</p>
+<ul>
+<li id="Stevenson18"><a class="existingWikiWord" href="/nlab/show/Danny+Stevenson">Danny Stevenson</a>, <em>Notes on the Joyal model structure</em> (2018) arXiv:<a href="https://arxiv.org/abs/1810.05233">1810.05233</a>.</li>
+</ul>
 
 <p>The relation to the model structure for <a class="existingWikiWord" href="/nlab/show/complete+Segal+space">complete Segal space</a>s is in</p>
 
@@ -1156,14 +1160,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 17, 2018 at 00:44:05.
+  Last revised on October 17, 2018 at 22:43:59.
   See the <a href="https://ncatlab.org/nlab/history/model structure for quasi-categories" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/model+structure+for+quasi-categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/model+structure+for+quasi-categories/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/model+structure+for+quasi-categories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/model+structure+for+quasi-categories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/model+structure+for+quasi-categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/model+structure+for+quasi-categories/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/model+structure+for+quasi-categories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/model+structure+for+quasi-categories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/model structure for quasi-categories/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
