--- a/pages/456.html
+++ b/pages/456.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/2660/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/2660/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1234,7 +1234,7 @@ margin-left: 0em;
 
 <p>That the induced pair <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msup><mi>f</mi> <mo>*</mo></msup><mo>,</mo><msub><mi>f</mi> <mo>*</mo></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(f^*, f_*)</annotation></semantics></math> forms a geometric morphism is (or should eventually be) discussed at <a class="existingWikiWord" href="/nlab/show/inverse+image">inverse image</a>.</p>
 
-<p>We now show that every geometric morphism of sheaf toposes arises this way from a continuous function, at least up to isomorphism. (In fact, more is true: the category of geometric morphisms <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Sh</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo>→</mo><mi>Sh</mi><mo stretchy="false">(</mo><mi>Y</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Sh(X)\to Sh(Y)</annotation></semantics></math> is equivalent to the poset of continuous functons <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>→</mo><mi>Y</mi></mrow><annotation encoding="application/x-tex">X\to Y</annotation></semantics></math> with the <a class="existingWikiWord" href="/nlab/show/specialization+ordering">specialization ordering</a>.) We follow <a href="#MacLaneMoerdijk">MacLane-Moerdijk, page 348</a>.</p>
+<p>We now show that every geometric morphism of sheaf toposes arises this way from a continuous function, at least up to isomorphism. (In fact, more is true: the category of geometric morphisms <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Sh</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo>→</mo><mi>Sh</mi><mo stretchy="false">(</mo><mi>Y</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Sh(X)\to Sh(Y)</annotation></semantics></math> is equivalent to the poset of continuous functons <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>→</mo><mi>Y</mi></mrow><annotation encoding="application/x-tex">X\to Y</annotation></semantics></math> with the <a class="existingWikiWord" href="/nlab/show/specialization+ordering">specialization ordering</a> (<a class="existingWikiWord" href="/nlab/show/Elephant">Elephant</a>, Proposition C.1.4.5.). We follow <a href="#MacLaneMoerdijk">MacLane-Moerdijk, page 348</a>.</p>
 
 <p>One reconstructs the continuous map <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>f</mi><mo>:</mo><mi>X</mi><mo>→</mo><mi>Y</mi></mrow><annotation encoding="application/x-tex">f : X \to Y</annotation></semantics></math> from a geometric morphism <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>f</mi><mo>:</mo><mi>Sh</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo>→</mo><mi>Sh</mi><mo stretchy="false">(</mo><mi>Y</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">f : Sh(X) \to Sh(Y)</annotation></semantics></math> as follows.</p>
 
@@ -1356,14 +1356,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 15, 2018 at 10:00:22.
+  Last revised on October 17, 2018 at 22:24:00.
   See the <a href="https://ncatlab.org/nlab/history/geometric morphism" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/geometric+morphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+morphism/52" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(52 revisions)</span> | <a href="/nlab/show/diff/geometric+morphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+morphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/geometric+morphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+morphism/53" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(53 revisions)</span> | <a href="/nlab/show/diff/geometric+morphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+morphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/geometric morphism/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
