--- a/pages/19719.html
+++ b/pages/19719.html
@@ -322,7 +322,7 @@ margin-left: 0em;
 
 <h2 id="overview">Overview</h2>
 
-<p>The Initiality Project is a communal effort to prove an <span class="newWikiWord">initiality theorem<a href="/nlab/new/initiality+theorem">?</a></span> for a <a class="existingWikiWord" href="/nlab/show/dependent+type+theory">dependent type theory</a>: that the categorical structure constructed out of the syntax is the <a class="existingWikiWord" href="/nlab/show/initial+object">initial object</a> in some category of <a class="existingWikiWord" href="/nlab/show/categorical+model+of+dependent+types">structure categorical objects</a>.</p>
+<p>The Initiality Project is a communal effort to prove an <span class="newWikiWord">initiality theorem<a href="/nlab/new/initiality+theorem">?</a></span> for a <a class="existingWikiWord" href="/nlab/show/dependent+type+theory">dependent type theory</a>: that the categorical structure constructed out of the syntax is the <a class="existingWikiWord" href="/nlab/show/initial+object">initial object</a> in some category of <a class="existingWikiWord" href="/nlab/show/categorical+model+of+dependent+types">structured categorical objects</a>.</p>
 
 <h2 id="plans_and_work">Plans and work</h2>
 
@@ -345,14 +345,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 18, 2018 at 15:36:34.
+  Last revised on October 18, 2018 at 16:12:56.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/31" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(31 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/32" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(32 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
