--- a/pages/19851.html
+++ b/pages/19851.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9157/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9157/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -391,6 +391,8 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Tamara+von+Glehn">Tamara von Glehn</a></li>
 
 <li><a class="existingWikiWord" href="/nlab/show/Nicolai+Kraus">Nicolai Kraus</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/Todd+Trimble">Todd Trimble</a></li>
 </ul>
 </body></html>
 
@@ -398,14 +400,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on October 18, 2018 at 15:37:51.
+  Last revised on October 18, 2018 at 20:37:56.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - Participants" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+Participants" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Initiality+Project+-+Participants" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+Participants/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Initiality+Project+-+Participants" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+Participants" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - Participants/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
